# leafpress

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  action.yml  pyproject.toml  ty.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: mkdocs.yml
docs/docs/: 404.md  CNAME  about.md  architecture.md  branding.md  changelog.md  ci.md  cli.md  configuration.md  diagrams.md  docker.md  docx.md  epub.md  extensions.md  git-integration.md  html.md  import.md  index.md  installation.md  markdown.md  odt.md  pdf.md  remote-sources.md  ui.md
docs/docs/stylesheets/: extra.css
docs/overrides/: home.html
src/leafpress/: __init__.py  __main__.py  annotations.py  base_renderer.py  cli.py  config.py  diagrams.py  doctor.py  exceptions.py  git_info.py  markdown_renderer.py  mermaid.py  mkdocs_parser.py  package_version.py  pipeline.py  project.py  source.py
src/leafpress/docx/: html_converter.py  renderer.py  styles.py
src/leafpress/epub/: renderer.py  styles.py
src/leafpress/html/: renderer.py  styles.py
src/leafpress/pdf/: styles.py  (+1 more)
tests/: conftest.py  create_reference_fixtures.py  helpers.py  test_annotations.py  test_base_renderer.py  test_cibutler_integration.py  test_cli.py  test_config.py  test_diagrams.py  test_docker.py  test_docs_site.py  test_doctor.py  test_docx_html_converter.py  test_docx_renderer.py  test_docx_styles.py  test_epub_renderer.py  test_fetch_diagrams_cli.py  test_git_info.py  test_html_renderer.py  test_html_styles.py  test_import.py  test_import_comprehensive.py  test_import_pptx.py  test_import_reference.py  test_import_tex.py  test_import_xlsx.py  test_importer_image_handler.py  test_importer_markdown_converter.py  test_init.py  test_main.py  test_markdown_export.py  test_markdown_renderer.py  test_mermaid.py  test_mkdocs_parser.py  test_odt_renderer.py  test_package_version.py  test_pdf_renderer.py  test_pdf_styles.py  test_pipeline.py  test_pipeline_monorepo.py  (+5 more)
tests/fixtures/: academic_paper.tex  comprehensive_document.docx  comprehensive_document.tex  comprehensive_presentation.pptx  comprehensive_workbook.xlsx  reference_presentation.pptx  reference_workbook.xlsx  sample.tex  sample_config.yml
(+25 files in other folders)
